{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 323,
  "lineage": "cbc5e9c2-94f1-a4a2-e04d-abbbabc079e6",
  "resources": [
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945822377117:internet-gateway/igw-01cf697b030e0c5ea",
            "id": "igw-01cf697b030e0c5ea",
            "owner_id": "945822377117",
            "region": "us-east-1",
            "tags": {
              "Name": "appscrib-internet-gateway"
            },
            "tags_all": {
              "Name": "appscrib-internet-gateway"
            },
            "vpc_id": "vpc-0acd0dfec5f916230"
          },
          "dependencies": [
            "module.vpc.aws_vpc.appscrib-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0083c54ed6d95eaa3",
            "arn": "arn:aws:ec2:us-east-1:945822377117:elastic-ip/eipalloc-0083c54ed6d95eaa3",
            "association_id": "eipassoc-0f792f7ebfbeee9cc",
            "domain": "vpc",
            "id": "eipalloc-0083c54ed6d95eaa3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-015d84b33129e745b",
            "private_dns": "ip-10-0-1-26.ec2.internal",
            "private_ip": "10.0.1.26",
            "public_dns": "ec2-13-223-240-245.compute-1.amazonaws.com",
            "public_ip": "13.223.240.245",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.ig1",
            "module.vpc.aws_vpc.appscrib-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0083c54ed6d95eaa3",
            "association_id": "eipassoc-0f792f7ebfbeee9cc",
            "connectivity_type": "public",
            "id": "nat-0f8395325232ac264",
            "network_interface_id": "eni-015d84b33129e745b",
            "private_ip": "10.0.1.26",
            "public_ip": "13.223.240.245",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-091519efb4795380d",
            "tags": {
              "Name": "appscrip-nat"
            },
            "tags_all": {
              "Name": "appscrip-nat"
            }
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.ig1",
            "module.nat_gateway.aws_eip.nat_eip",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.appscrib-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route",
      "name": "private-natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b96073f2e4f594cf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f8395325232ac264",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0b96073f2e4f594cf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_nat_gateway.nat",
            "module.route_table.aws_route_table.pri-rt"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internetgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01cf697b030e0c5ea",
            "id": "r-rtb-0224e396028516f9b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0224e396028516f9b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.ig1",
            "module.route_table.aws_route_table.pub-rt",
            "module.vpc.aws_vpc.appscrib-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945822377117:route-table/rtb-0b96073f2e4f594cf",
            "id": "rtb-0b96073f2e4f594cf",
            "owner_id": "945822377117",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f8395325232ac264",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kube-pri-01"
            },
            "tags_all": {
              "Name": "kube-pri-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acd0dfec5f916230"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.appscrib-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945822377117:route-table/rtb-0224e396028516f9b",
            "id": "rtb-0224e396028516f9b",
            "owner_id": "945822377117",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01cf697b030e0c5ea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kube-pub-01"
            },
            "tags_all": {
              "Name": "kube-pub-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acd0dfec5f916230"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.appscrib-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095de099775afc74a",
            "region": "us-east-1",
            "route_table_id": "rtb-0b96073f2e4f594cf",
            "subnet_id": "subnet-0c8446c589694b3d3"
          },
          "dependencies": [
            "module.route_table.aws_route_table.pri-rt",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.appscrib-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053dce92a16a1bbf7",
            "region": "us-east-1",
            "route_table_id": "rtb-0b96073f2e4f594cf",
            "subnet_id": "subnet-02fc004cbb529bef5"
          },
          "dependencies": [
            "module.route_table.aws_route_table.pri-rt",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.appscrib-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cc3a5737dafde7d",
            "region": "us-east-1",
            "route_table_id": "rtb-0224e396028516f9b",
            "subnet_id": "subnet-091519efb4795380d"
          },
          "dependencies": [
            "module.route_table.aws_route_table.pub-rt",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.appscrib-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d902e25158adcb5a",
            "region": "us-east-1",
            "route_table_id": "rtb-0224e396028516f9b",
            "subnet_id": "subnet-0f27262c4fa0b1677"
          },
          "dependencies": [
            "module.route_table.aws_route_table.pub-rt",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.appscrib-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945822377117:subnet/subnet-0c8446c589694b3d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8446c589694b3d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "945822377117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "appscrip-pri-01"
            },
            "tags_all": {
              "Name": "appscrip-pri-01"
            },
            "vpc_id": "vpc-0acd0dfec5f916230"
          },
          "dependencies": [
            "module.vpc.aws_vpc.appscrib-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945822377117:subnet/subnet-02fc004cbb529bef5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fc004cbb529bef5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "945822377117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "appscrip-pri-02"
            },
            "tags_all": {
              "Name": "appscrip-pri-02"
            },
            "vpc_id": "vpc-0acd0dfec5f916230"
          },
          "dependencies": [
            "module.vpc.aws_vpc.appscrib-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945822377117:subnet/subnet-091519efb4795380d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091519efb4795380d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "945822377117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "appscrip-pub-01"
            },
            "tags_all": {
              "Name": "appscrip-pub-01"
            },
            "vpc_id": "vpc-0acd0dfec5f916230"
          },
          "dependencies": [
            "module.vpc.aws_vpc.appscrib-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945822377117:subnet/subnet-0f27262c4fa0b1677",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f27262c4fa0b1677",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "945822377117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "appscrip-pub-02"
            },
            "tags_all": {
              "Name": "appscrip-pub-02"
            },
            "vpc_id": "vpc-0acd0dfec5f916230"
          },
          "dependencies": [
            "module.vpc.aws_vpc.appscrib-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "appscrib-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945822377117:vpc/vpc-0acd0dfec5f916230",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dab268dcd3e44547",
            "default_route_table_id": "rtb-022f1cb39dc986a2d",
            "default_security_group_id": "sg-0e6d64a51ea810181",
            "dhcp_options_id": "dopt-0d4ba40b9bab053ea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0acd0dfec5f916230",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-022f1cb39dc986a2d",
            "owner_id": "945822377117",
            "region": "us-east-1",
            "tags": {
              "Name": "appscrip_vpc"
            },
            "tags_all": {
              "Name": "appscrip_vpc"
            }
          }
        }
      ]
    }
  ]
}